# kb-iw

./: MANIFEST.in  README.md  cli.py  package-pypi.sh  pyproject.toml  setup.py
jp2batchconverter/: grok.py  jp2batchconverter.py  kakadu.py  pixelcheck.py  propertiescheck.py  shared.py  test.py  wfgeneric.py
jp2batchconverter/conf/: config.json
jp2batchconverter/conf/schemas/: kbMaster_2015.sch
kbiw/: __main__.py  concordance.py  ctables.py  grok.py  kakadu.py  kbiw.py  pixelcheck.py  propertiescheck.py  test.py  vips.py
kbiw/conf/: config.json
kbiw/conf/schemas/: kbAccess_2015.sch  kbMaster_2026.sch
kbiw/workflows/: __init__.py  generic.py  tifftojp2.py  tifftojp2generic.py  tifftojp2mh.py
